substituted doc updates and dml running, initial cleanup for router started